// SPDX-FileCopyrightText: 2025 Shun Sakai
//
// SPDX-License-Identifier: CC-BY-4.0

= Changelog
:toc: preamble
:project-url: https://github.com/sorairolake/sfc-rs
:compare-url: {project-url}/compare
:issue-url: {project-url}/issues
:pull-request-url: {project-url}/pull

All notable changes to this project will be documented in this file.

The format is based on https://keepachangelog.com/[Keep a Changelog], and this
project adheres to https://semver.org/[Semantic Versioning].

== {compare-url}/v0.1.5\...v0.2.0[0.2.0] - 2025-11-10

=== Changed

* Rename crate to `sfc-prng` ({pull-request-url}/75[#75])

== {compare-url}/v0.1.4\...v0.1.5[0.1.5] - 2025-08-22

=== Changed

* Change the license for documents to CC BY 4.0 ({pull-request-url}/35[#35])

== {compare-url}/v0.1.3\...v0.1.4[0.1.4] - 2025-03-05

=== Changed

* Update documentation ({pull-request-url}/25[#25])

== {compare-url}/v0.1.2\...v0.1.3[0.1.3] - 2025-02-25

=== Added

* Add an example of generating random bytes ({pull-request-url}/17[#17])
* Add `Sfc32::new_u64` and `Sfc64::new_u64` methods ({pull-request-url}/18[#18])

== {compare-url}/v0.1.1\...v0.1.2[0.1.2] - 2025-02-23

=== Changed

* Update crate-level documentation ({pull-request-url}/15[#15])

== {compare-url}/v0.1.0\...v0.1.1[0.1.1] - 2025-02-22

=== Added

* Add `Sfc32::new` and `Sfc64::new` methods ({pull-request-url}/11[#11])

=== Changed

* Bump MSRV to 1.85.0 ({pull-request-url}/9[#9])

== {project-url}/releases/tag/v0.1.0[0.1.0] - 2025-02-19

=== Added

* Initial release