@@ -28,7 +28,7 @@ use serde::{Deserialize, Serialize};
 /// # };
 /// #
 /// let mut rng = Sfc32::from_seed([0; 12]);
-/// assert_eq!(rng.next_u32(), 0x5146_76c3);
+/// assert_eq!(rng.next_u32(), 0xfb52_c520);
 /// ```
 ///
 /// [PractRand]: https://pracrand.sourceforge.net/
@@ -45,24 +45,28 @@ pub struct Sfc32 {
 impl Sfc32 {
     /// Creates a new `Sfc32` using the given seeds.
     ///
+    /// If `rounds` is [`None`], the state is mixed up 15 rounds during
+    /// initialization.
+    ///
     /// # Examples
     ///
     /// ```
     /// # use sfc_prng::{Sfc32, rand_core::RngCore};
     /// #
-    /// let mut rng = Sfc32::new(0, 0, 0);
-    /// assert_eq!(rng.next_u32(), 0x5146_76c3);
+    /// let mut rng = Sfc32::new(0, 0, 0, None);
+    /// assert_eq!(rng.next_u32(), 0xfb52_c520);
     /// ```
     #[must_use]
     #[inline]
-    pub fn new(a: u32, b: u32, c: u32) -> Self {
+    pub fn new(a: u32, b: u32, c: u32, rounds: Option<u32>) -> Self {
         let mut state = Self {
             a,
             b,
             c,
             counter: 1,
         };
-        for _ in 0..12 {
+        let rounds = rounds.unwrap_or(15);
+        for _ in 0..rounds {
             state.next_u32();
         }
         state
@@ -71,9 +75,8 @@ impl Sfc32 {
     #[allow(clippy::cast_possible_truncation)]
     /// Creates a new `Sfc32` using a [`u64`] seed.
     ///
-    /// This method is equivalent to providing zero for the `a` parameter, the
-    /// lower 32-bit of `seed` for the `b` parameter, and the higher 32-bit of
-    /// `seed` for the `c` parameter of [`Sfc32::new`].
+    /// If `rounds` is [`None`], the state is mixed up 12 rounds during
+    /// initialization.
     ///
     /// <div class="warning">
     ///
@@ -87,13 +90,15 @@ impl Sfc32 {
     /// ```
     /// # use sfc_prng::{Sfc32, rand_core::RngCore};
     /// #
-    /// let mut rng = Sfc32::new_u64(0);
+    /// let mut rng = Sfc32::new_u64(0, None);
     /// assert_eq!(rng.next_u32(), 0x5146_76c3);
     /// ```
     #[must_use]
     #[inline]
-    pub fn new_u64(seed: u64) -> Self {
-        Self::new(0, seed as u32, (seed >> u32::BITS) as u32)
+    pub fn new_u64(seed: u64, rounds: Option<u32>) -> Self {
+        let (a, b, c) = (0, seed as u32, (seed >> u32::BITS) as u32);
+        let rounds = rounds.or(Some(12));
+        Self::new(a, b, c, rounds)
     }
 }
 
@@ -130,7 +135,7 @@ impl SeedableRng for Sfc32 {
     fn from_seed(seed: Self::Seed) -> Self {
         let mut s = [u32::default(); 3];
         le::read_u32_into(&seed, &mut s);
-        Self::new(s[0], s[1], s[2])
+        Self::new(s[0], s[1], s[2], None)
     }
 }
 
@@ -140,6 +145,62 @@ mod tests {
 
     use super::*;
 
+    const SEED_2: [u8; 12] = [
+        0x00, 0x00, 0x00, 0x00, 0xef, 0xcd, 0xab, 0x89, 0x67, 0x45, 0x23, 0x01,
+    ];
+
+    const EXPECTED_1: [u32; 16] = [
+        0xfb52_c520,
+        0x3880_2be1,
+        0x9482_79e6,
+        0xec4b_f1d9,
+        0x7cb0_a909,
+        0xfad8_b4a8,
+        0x3ca4_b808,
+        0x3821_b4c5,
+        0x5e70_23ca,
+        0x50f2_6bf7,
+        0xf1e1_b0a2,
+        0x6163_032f,
+        0x3bf3_c9a4,
+        0x6db6_c5e0,
+        0x5733_1c8c,
+        0x2aaf_9993,
+    ];
+    const EXPECTED_BYTES_1: [u8; 64] = [
+        0x20, 0xc5, 0x52, 0xfb, 0xe1, 0x2b, 0x80, 0x38, 0xe6, 0x79, 0x82, 0x94, 0xd9, 0xf1, 0x4b,
+        0xec, 0x09, 0xa9, 0xb0, 0x7c, 0xa8, 0xb4, 0xd8, 0xfa, 0x08, 0xb8, 0xa4, 0x3c, 0xc5, 0xb4,
+        0x21, 0x38, 0xca, 0x23, 0x70, 0x5e, 0xf7, 0x6b, 0xf2, 0x50, 0xa2, 0xb0, 0xe1, 0xf1, 0x2f,
+        0x03, 0x63, 0x61, 0xa4, 0xc9, 0xf3, 0x3b, 0xe0, 0xc5, 0xb6, 0x6d, 0x8c, 0x1c, 0x33, 0x57,
+        0x93, 0x99, 0xaf, 0x2a,
+    ];
+
+    const EXPECTED_2: [u32; 16] = [
+        0x35e0_5b54,
+        0x4c62_7ca1,
+        0x33a0_43e2,
+        0xb611_3c67,
+        0x7cab_9699,
+        0x4a52_efeb,
+        0x5936_797f,
+        0x139e_2b9f,
+        0xc7df_3db1,
+        0x61ce_1717,
+        0x5581_e344,
+        0xbc30_16ea,
+        0xa6bf_d381,
+        0xcfed_5524,
+        0x8a34_536c,
+        0x3e3f_a43b,
+    ];
+    const EXPECTED_BYTES_2: [u8; 64] = [
+        0x54, 0x5b, 0xe0, 0x35, 0xa1, 0x7c, 0x62, 0x4c, 0xe2, 0x43, 0xa0, 0x33, 0x67, 0x3c, 0x11,
+        0xb6, 0x99, 0x96, 0xab, 0x7c, 0xeb, 0xef, 0x52, 0x4a, 0x7f, 0x79, 0x36, 0x59, 0x9f, 0x2b,
+        0x9e, 0x13, 0xb1, 0x3d, 0xdf, 0xc7, 0x17, 0x17, 0xce, 0x61, 0x44, 0xe3, 0x81, 0x55, 0xea,
+        0x16, 0x30, 0xbc, 0x81, 0xd3, 0xbf, 0xa6, 0x24, 0x55, 0xed, 0xcf, 0x6c, 0x53, 0x34, 0x8a,
+        0x3b, 0xa4, 0x3f, 0x3e,
+    ];
+
     // This test vector was generated by the `RNG_output` command of PractRand
     // version pre0.95.
     //
@@ -148,7 +209,7 @@ mod tests {
     // ```sh
     // ./RNG_output sfc32 64 0x0 | xxd -i
     // ```
-    const EXPECTED_1: [u32; 16] = [
+    const EXPECTED_3: [u32; 16] = [
         0x5146_76c3,
         0x08a8_09df,
         0x3034_9d2b,
@@ -166,13 +227,6 @@ mod tests {
         0x6163_032f,
         0x3bf3_c9a4,
     ];
-    const EXPECTED_BYTES_1: [u8; 64] = [
-        0xc3, 0x76, 0x46, 0x51, 0xdf, 0x09, 0xa8, 0x08, 0x2b, 0x9d, 0x34, 0x30, 0x20, 0xc5, 0x52,
-        0xfb, 0xe1, 0x2b, 0x80, 0x38, 0xe6, 0x79, 0x82, 0x94, 0xd9, 0xf1, 0x4b, 0xec, 0x09, 0xa9,
-        0xb0, 0x7c, 0xa8, 0xb4, 0xd8, 0xfa, 0x08, 0xb8, 0xa4, 0x3c, 0xc5, 0xb4, 0x21, 0x38, 0xca,
-        0x23, 0x70, 0x5e, 0xf7, 0x6b, 0xf2, 0x50, 0xa2, 0xb0, 0xe1, 0xf1, 0x2f, 0x03, 0x63, 0x61,
-        0xa4, 0xc9, 0xf3, 0x3b,
-    ];
 
     // This test vector was generated by the `RNG_output` command of PractRand
     // version pre0.95.
@@ -182,10 +236,7 @@ mod tests {
     // ```sh
     // ./RNG_output sfc32 64 0x123456789abcdef | xxd -i
     // ```
-    const SEED_2: [u8; 12] = [
-        0x00, 0x00, 0x00, 0x00, 0xef, 0xcd, 0xab, 0x89, 0x67, 0x45, 0x23, 0x01,
-    ];
-    const EXPECTED_2: [u32; 16] = [
+    const EXPECTED_4: [u32; 16] = [
         0x8471_2d97,
         0xf5a3_d9c8,
         0x5cd0_a295,
@@ -203,13 +254,6 @@ mod tests {
         0xbc30_16ea,
         0xa6bf_d381,
     ];
-    const EXPECTED_BYTES_2: [u8; 64] = [
-        0x97, 0x2d, 0x71, 0x84, 0xc8, 0xd9, 0xa3, 0xf5, 0x95, 0xa2, 0xd0, 0x5c, 0x54, 0x5b, 0xe0,
-        0x35, 0xa1, 0x7c, 0x62, 0x4c, 0xe2, 0x43, 0xa0, 0x33, 0x67, 0x3c, 0x11, 0xb6, 0x99, 0x96,
-        0xab, 0x7c, 0xeb, 0xef, 0x52, 0x4a, 0x7f, 0x79, 0x36, 0x59, 0x9f, 0x2b, 0x9e, 0x13, 0xb1,
-        0x3d, 0xdf, 0xc7, 0x17, 0x17, 0xce, 0x61, 0x44, 0xe3, 0x81, 0x55, 0xea, 0x16, 0x30, 0xbc,
-        0x81, 0xd3, 0xbf, 0xa6,
-    ];
 
     #[test]
     fn clone() {
@@ -222,7 +266,7 @@ mod tests {
         let rng = Sfc32::from_seed(Default::default());
         assert_eq!(
             format!("{rng:?}"),
-            "Sfc32 { a: 3287285385, b: 2371254317, c: 4048138432, counter: 13 }"
+            "Sfc32 { a: 3033783054, b: 1182722562, c: 4269119441, counter: 16 }"
         );
     }
 
@@ -241,13 +285,13 @@ mod tests {
     #[test]
     fn new() {
         {
-            let mut rng = Sfc32::new(u32::default(), u32::default(), u32::default());
+            let mut rng = Sfc32::new(u32::default(), u32::default(), u32::default(), None);
             for e in EXPECTED_1 {
                 assert_eq!(rng.next_u32(), e);
             }
         }
         {
-            let mut rng = Sfc32::new(u32::default(), 0x89ab_cdef, 0x0123_4567);
+            let mut rng = Sfc32::new(u32::default(), 0x89ab_cdef, 0x0123_4567, None);
             for e in EXPECTED_2 {
                 assert_eq!(rng.next_u32(), e);
             }
@@ -257,14 +301,14 @@ mod tests {
     #[test]
     fn new_u64() {
         {
-            let mut rng = Sfc32::new_u64(u64::default());
-            for e in EXPECTED_1 {
+            let mut rng = Sfc32::new_u64(u64::default(), None);
+            for e in EXPECTED_3 {
                 assert_eq!(rng.next_u32(), e);
             }
         }
         {
-            let mut rng = Sfc32::new_u64(0x0123_4567_89ab_cdef);
-            for e in EXPECTED_2 {
+            let mut rng = Sfc32::new_u64(0x0123_4567_89ab_cdef, None);
+            for e in EXPECTED_4 {
                 assert_eq!(rng.next_u32(), e);
             }
         }
@@ -358,7 +402,7 @@ mod tests {
         let json = serde_json::to_string(&rng).unwrap();
         assert_eq!(
             json,
-            r#"{"a":3287285385,"b":2371254317,"c":4048138432,"counter":13}"#
+            r#"{"a":3033783054,"b":1182722562,"c":4269119441,"counter":16}"#
         );
 
         let mut deserialized_rng = serde_json::from_str::<Sfc32>(&json).unwrap();
