@@ -14,6 +14,14 @@ All notable changes to this project will be documented in this file.
 The format is based on https://keepachangelog.com/[Keep a Changelog], and this
 project adheres to https://semver.org/[Semantic Versioning].
 
+== {compare-url}/v0.2.0\...HEAD[Unreleased]
+
+=== Changed
+
+* Add `rounds` parameter to the constructors ({pull-request-url}/79[#79])
+* The default number of rounds for the `new` methods is the same as the
+  reference implementation ({pull-request-url}/79[#79])
+
 == {compare-url}/v0.1.5\...v0.2.0[0.2.0] - 2025-11-10
 
 === Changed
